--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,3 +1,3 @@
-<h2 class="text-center">here we exclude the tag by using exclude entry point on Liveengage, behavior</h2>
+<h2 class="text-center">En este componente no debería aparecer el chat </h2>
 
-<button class="btn btn-success container col-3" routerLink="">Back to init</button>
+<button class="btn btn-success container col-3" routerLink="">Regresar a inicio</button>
