--- a/src/styles.css
+++ b/src/styles.css
@@ -113,3 +113,5 @@
     font-style: normal !important;
     color: #998c8c !important;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
